[package]
name = "bevy_webserver"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Malek <pocmalek@gmail.com>"]
description = "A web server integration for the Bevy game engine that allows you to easily append a webserver to Bevy."
readme = "README.md"
repository = "https://github.com/MalekiRe/bevy_webserver"

[dependencies]
hyper = { version = "1.8.1", features = ["server", "http1"] }
async-io = "2.6.0"
smol-hyper = "0.1.1"
http-body-util = "0.1"
hyper-util = "0.1.20"
axum = "0.8.8"
tower-service = "0.3.3"
anyhow = "1.0.102"
tower = "0.5.3"
async-executor = "1.14.0"
fjall = "3.1.0"
never-type = "0.1.1"
pin-project-lite = "0.2.17"

[dependencies.bevy]
version = "0.18.1"
default-features = false

[dependencies.bevy_defer]
git = "https://github.com/bubg-dev/bevy_defer.git"
tag = "v0.16.0"
default-features = false
features = ["derive", "spawn_macro"]

[dev-dependencies]
maud = "0.27.0"
serde = "1.0.228" 
serde_json = "1.0.149"

[dev-dependencies.bevy]
version = "0.18.1"
default-features = false
features = ["serialize"]
